# Flash-Sim

./: .gitignore  README.md  base.py  my_todo.md  note.md  prompt.md  prompt.txt  pyproject.toml  results.json  todo.md  usage.md  version.md
doc/: power-reference-data.md
docs/: cim-cam.md  current-flashsim-usage.md  init-simulator-overview.md
examples/: basic_trace.json  compute_test.json  config.json  flashsim_25pct_cwdp_config.json  flashsim_25pct_nocache_config.json  flashsim_50pct_cwdp_config.json  flashsim_50pct_nocache_config.json  flashsim_75pct_cwdp_config.json  mixed_trace.json  search_compute_trace.json  static_write_test.json  test.json  test_trace.json
flash_sim/: Device.py  FTL.py  HIL.py  Host.py  PCIe_link.py  PHY.py  __init__.py  check_these  chip.py  cli.py  common.py  config.py  engine.py  gc_pressure_matrix.py  generate_precondition_data.py  main.py  parser.py  request_latency_report.py  simulator.py  sitecustomize.py  timeline_recorder.py  utils.py  visualizer.py
openspec/: config.yaml
output/: timeline_events.json
pre_data/: precondition_data.json
precondition/: pre_trace.json
report/: test_read_write_request_latency.csv  test_read_write_request_latency.json  test_search_compute_request_latency.csv  test_search_compute_request_latency.json  test_trace_request_latency.csv  test_trace_request_latency.json
slides/: 1111111.pptx  20260317.pptx  20260401.pptx  背景介绍.pptx
test_case/: gc_pressure_concurrent_overwrite.json  gc_pressure_gc_reoverwrite.json  gc_pressure_low_invalid.json  gc_pressure_post_flush_sustained.json  test_read.json  (+11 more)
(+256 files in other folders)
